--- a/src/components/CodemaniaApp.css
+++ b/src/components/CodemaniaApp.css
@@ -1,5 +1,12 @@
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.content {
+  flex: 1 0 auto;
 }
 
 .App-logo {
@@ -12,10 +19,6 @@
   color: white;
 }
 
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
+.App-title, .App-intro {
+  font-size: 24pt;
 }
