--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,14 @@ body {
   padding: 0;
   font-size: 24pt;
   font-family: 'Oswald', sans-serif;
+  color: #fff;
+  background: rgb(0,0,0);
+  background-color: rgb(0,0,23);
+  background-image: url(./images/2020/assets/stars-bg.svg);
 }
 
 .content {
-  margin-top: 40px;
+  margin-top: 90px;
 }
 
 #root {
@@ -18,6 +22,11 @@ body {
 
 h2 {
   margin: 15px 0;
+}
+
+a {
+  color: rgb(255,153,0);
+  text-decoration: none;
 }
 
 .oswald-light {
@@ -39,9 +48,6 @@ h2 {
 .App > * {
   flex: 1 100%;
 }
-.bg {
-  background: #ff8f00;
-}
 
 
 /* Medium screens */
@@ -59,3 +65,21 @@ h2 {
   .content { flex: 8 0px; }
 }
 
+/* Animations */
+
+@keyframes float {
+  0% {
+    transform: translateY(0);
+    -webkit-transform: translateY(0);
+  }
+
+  50% {
+    transform: translateY(1rem);
+    -webkit-transform: translateY(1rem);
+  }
+
+  100% {
+    transform: translateY(0);
+    -webkit-transform: translateY(0);
+  }
+}
